made corrections in the index and landing page files

--- a/HTML/Contact.html
+++ b/HTML/Contact.html
@@ -15,14 +15,14 @@
 		  
 				<ul class="navlist">
 				  <li><a href="/index.html">Home</a></li>
-				  <li><a href="/HTML/AboutUs.html">About Us</a></li>
+				  <li><a href="./AboutUs.html">About Us</a></li>
 				  <li id="service"><a href="#">Services</a>
 					<ul id="list">
 					  <li><a href="">Agile Coaching</a></li>
 					  <li><a href="">Mentorship</a></li>
 					</ul>
 				  </li>
-				  <li><a href="/HTML/Contact.html">Contact Us</a></li>
+				  <li><a href="./Contact.html">Contact Us</a></li>
 				</ul>
 				<div class="btn-div">
 				  <button id="btn1" type="submit">Log in</button>
