--- a/HTML/Mentee-dashboard/Ali-chat.html
+++ b/HTML/Mentee-dashboard/Ali-chat.html
@@ -55,7 +55,7 @@
                             <a
                                 class="nav-link fs-5"
                                 id="nav-link2"
-                                href="#"
+                                href="./mentee-dashboard-1.html"
                                 >Dashboard</a
                             >
                         </li>
@@ -64,7 +64,7 @@
                                 class="nav-link fs-5"
                                 id="nav-link2"
                                 href="#"
-                                >Responses</a
+                                >Resources</a
                             >
                         </li>
                         <div class="btn-div d-flex gap-4 position-relative">
