--- a/HTML/Mentee-dashboard/achievements.html
+++ b/HTML/Mentee-dashboard/achievements.html
@@ -63,8 +63,8 @@
                             <a
                                 class="nav-link fs-5"
                                 id="nav-link2"
-                                href="#"
-                                >Responses</a
+                                href="./resource.html"
+                                >Resources</a
                             >
                         </li>
                         <div class="btn-div d-flex gap-4 position-relative">
@@ -131,7 +131,7 @@
                         <a
                             href=""
                             class="text-black ms-2"
-                            >Home</a
+                            >Join waitlist</a
                         >
                     </div>
                     <div class="icon-links ps-3">
@@ -140,7 +140,7 @@
                             alt=""
                         />
                         <a
-                            href="./groups-chats.html"
+                            href=".chats.html"
                             class="text-black ms-2"
                             >Messages</a
                         >
