--- a/HTML/SignUp_Mentee.html
+++ b/HTML/SignUp_Mentee.html
@@ -148,9 +148,16 @@
 								>
 									Choose Role
 								</option>
-								<option value=""></option>
-								<option value=""></option>
-								<option value=""></option>
+								<option value="">Product Manager</option>
+                        <option value="">Artificial Intelligence</option>
+                        <option value="">Quality Assurance</option>
+                        <option value="">Graphic Design</option>
+                        <option value="">Cyber Security</option>
+                        <option value="">Product Marketing</option>
+                        <option value="">Frontend Development</option>
+                        <option value="">Product Design</option>
+                        <option value="">Backend Development</option>
+                        <option value="">Scrum Master</option>
 							</select>
 						</div>
 						<div class="form-div mb-3">
@@ -167,9 +174,10 @@
 								>
 									Experience Level
 								</option>
-								<option value=""></option>
-								<option value=""></option>
-								<option value=""></option>
+								<option value="">Entry Level</option>
+                        <option value="">Intermediate</option>
+                        <option value="">Senior</option>
+                        <option value="">Manager</option>
 							</select>
 						</div>
 						<div class="form-div mb-3">
@@ -186,9 +194,16 @@
 								>
 									Select Industry
 								</option>
-								<option value=""></option>
-								<option value=""></option>
-								<option value=""></option>
+								<option value="">Product Manager</option>
+                        <option value="">Artificial Intelligence</option>
+                        <option value="">Quality Assurance</option>
+                        <option value="">Graphic Design</option>
+                        <option value="">Cyber Security</option>
+                        <option value="">Product Marketing</option>
+                        <option value="">Frontend Development</option>
+                        <option value="">Product Design</option>
+                        <option value="">Backend Development</option>
+                        <option value="">Scrum Master</option>
 							</select>
 						</div>
 						<button
