--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               </div>
             </div>
     
-            <button type="submit">Search</button>
+            <button type="submit"><a href="/HTML/SignUp_Mentee.html" class="protect-link" style="color: white;">Search</a></button>
     
           </div>
 
@@ -174,13 +174,18 @@
           <div class="section2-imgdiv-des">
             <img src="../Images/IMG_5897 1.png" alt="">
             <p>Create your profile</p>
-            <button>Sign up</button>
+            <button type="submit" id="btn4">Sign up</button>
+            <div class="dropdown3">
+              <button class="dropdown-button" onclick="window.location.href='./HTML/Mentor_signup.html'">Mentor </button>
+              <button class="dropdown-button" onclick="window.location.href='./HTML/SignUp_Mentee.html'">Mentee</button>
+              <button class="dropdown-button" onclick="window.location.href='./HTML/Agile-Coach/Agile-signup-1.html'">Agile Coach</button>
+          </div>
           </div>
 
           <div class="section2-imgdiv-des">
             <img src="../Images/IMG_5888 1.png" alt="">
             <p>Search Mentor</p>
-            <button>Search</button>
+            <button><a href="/HTML/SignUp_Mentee.html" class="prot-link" style="color: white;">Search</a></button>
           </div>
         </div>
 
@@ -188,7 +193,7 @@
           <div class="section2-imgdiv-des">
             <img src="../Images/IMG_5895 1.png" alt="">
             <p>Book Mentor</p>
-            <button>Manage Bookings</button>
+            <button><a href="/HTML/SignUp_Mentee.html" class="manage-link" style="color: white;">Manage Bookings</a></button>
           </div>
         </div>
 
@@ -240,7 +245,7 @@
           </div>
         </div>
 
-        <button>Explore Mentors</button>
+        <button><a href="/HTML/SignUp_Mentee.html" class="explore-link" style="color: white;">Explore Mentors</a></button>
 
       </div>
     </section>
@@ -369,7 +374,7 @@
 
         </div>
 
-        <button class="sec5-btn" style="margin-left: 35rem; margin-top: 8rem;" type="submit">Make Payment</button>
+        <button class="sec5-btn" style="margin-left: 35rem; margin-top: 8rem;" type="submit"><a href="/HTML/SignUp_Mentee.html" style="color: white;" class="payment-link">Make Payment</a></button>
       </div>
     </section>
 
@@ -419,8 +424,8 @@
           <ul>
             <li><a href="">Find Mentor</a></li>
             <li><a href="">Become a Mentor</a></li>
-            <li><a href="">About Us</a></li>
-            <li><a href="">Contact Us</a></li>
+            <li><a href="/HTML/AboutUs.html">About Us</a></li>
+            <li><a href="/HTML/Contact.html">Contact Us</a></li>
           </ul>
         </div>
         <div class="platform-links">
@@ -433,8 +438,8 @@
         <div class="platform-links">
           <h3 class="text-uppercase mb-2">Legal</h3>
           <ul>
-            <li><a href="">Terms and Conditions</a></li>
-            <li><a href="">Privacy Policy</a></li>
+            <li><a href="https://docs.google.com/document/d/14Cav8_tpLhMj1wqa7y7p3TokV7CuWWWVGshoX72YPZo/edit?usp=drivesdk">Terms and Conditions</a></li>
+            <li><a href="https://docs.google.com/document/d/12t_hjWHDg7Qe-BcslnpuhAd6RPmMWPe2E11MokK6itI/edit?usp=drivesdk">Privacy Policy</a></li>
             <li><a href="">FAQs</a></li>
           </ul>
         </div>
@@ -452,19 +457,38 @@
           <select
             name="role"
             id="role"
-            class=" py-2 ps-4 text-white bg-transparent border border-0"
+            class=" py-2 ps-4  bg-transparent border border-0"
           >
             <option
               value=""
               selected
               disabled
-              class="bg-transparent"
+              class="option1"
             >
               English
             </option>
-            <option value="">French</option>
-            <option value="">German</option>
-            <option value="">Spanish</option>
+            <option value="">Bengali</option>
+								<option value="">Chinese</option>
+								<option value="">English</option>
+								<option value="">French</option>
+								<option value="">German</option>
+								<option value="">Hindi</option>
+								<option value="">Indonesian</option>
+								<option value="">Japanese</option>
+								<option value="">Korean</option>
+								<option value="">Mandarin</option>
+								<option value="">Marathi</option>
+								<option value="">Portuguese</option>
+								<option value="">Russian</option>
+								<option value="">Spanish</option>
+								<option value="">Standard Arabic</option>
+								<option value="">Swahili</option>
+								<option value="">Tamil</option>
+								<option value="">Telugu</option>
+								<option value="">Turkish</option>
+								<option value="">Urdu</option>
+								<option value="">
+                                    Wu Chinese</option>
           </select>
         </form>
         <div class="online-links-wrappers">
