--- a/HTML/Mentee-dashboard/bookings.html
+++ b/HTML/Mentee-dashboard/bookings.html
@@ -12,6 +12,7 @@
 			integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
 			crossorigin="anonymous"
 		/>
+        <link rel="stylesheet" href="/CSS/footer.css">
 		<link
 			rel="stylesheet"
 			href="/CSS/bookings.css"
@@ -61,7 +62,7 @@
                                 <a
                                     class="nav-link fs-5"
                                     id="nav-link2"
-                                    href="./bookings.html"
+                                    href="./mentee-dashboard-1.html"
                                     >Dashboard</a
                                 >
                             </li>
@@ -146,7 +147,7 @@
                                 alt=""
                             />
                             <a
-                                href="./groups-chats.html"
+                                href="./chats.html"
                                 class="text-black ms-2"
                                 >Messages</a
                             >
@@ -162,7 +163,7 @@
                                 >Bookings</a
                             >
                         </div>
-                        <div class="icon-links ps-3">
+                        <div class="icon-links ps-3 position-relative">
                             <img
                                 src="/Images/connection-icon.svg"
                                 alt=""
@@ -172,6 +173,12 @@
                                 class="text-black ms-2 community-link"
                                 >Community</a
                             >
+                            <div class="card w-100 px-2 position-absolute card3">
+								<a href="./create-post.html">Create New Post</a>
+								<a href="./my-posts.html">My Post</a>
+								<a href="./trending.html">Trending</a>
+								<a href="./new-posts.html">New Posts</a>
+							</div>
                         </div>
                         <div class="icon-links ps-3">
                             <img
@@ -312,6 +319,114 @@
                 </div>
             </section>
         </main>
+
+        <footer>
+			<div class="footer-wrapper py-5 d-flex gap-5">
+				<div class="footer-logo">
+					<img
+						src="/Images/Agilyst Logo5 3.jpg"
+						alt=""
+					/>
+				</div>
+				<div class="footer-content-wrapper">
+					<form
+						action=""
+						class=""
+					>
+						<input
+							type="email"
+							name=""
+							id=""
+							placeholder="Your Email"
+							class="border-rounded rounded-pill bg-transparent text-white pe-5 py-2 ps-2 border-white w-75"
+							required
+						/>
+						<button
+							class="btn btn-large border rounded-pill bg-white pe-5 py-2 ps-2"
+						>
+							<a
+								href=""
+								class="px-5 text-primary"
+							>
+							Subscribe Now!
+						</a>
+						</button>
+					</form>
+					<div
+						class="footer-links text-white d-flex justify-content-between my-5"
+					>
+						<div class="platform-links">
+							<h3 class="text-uppercase mb-2">Platform</h3>
+							<ul>
+								<li><a href="">Find Mentor</a></li>
+								<li><a href="">Become a Mentor</a></li>
+								<li><a href="">About Us</a></li>
+								<li><a href="">Contact Us</a></li>
+							</ul>
+						</div>
+						<div class="platform-links">
+							<h3 class="text-uppercase mb-2">Product</h3>
+							<ul>
+								<li><a href="">Blog</a></li>
+								<li><a href="">Community</a></li>
+							</ul>
+						</div>
+						<div class="platform-links">
+							<h3 class="text-uppercase mb-2">Legal</h3>
+							<ul>
+								<li><a href="">Terms and Conditions</a></li>
+								<li><a href="">Privacy Policy</a></li>
+								<li><a href="">FAQs</a></li>
+							</ul>
+						</div>
+					</div>
+					<hr class="" />
+					<div class="copyright d-flex justify-content-between w-100 align-items-center mt-5">
+						<p class="text-white d-flex align-items-center gap-3">
+							<span class="fs-3 text-white">©</span> All rights reserved 2023
+						</p>
+						<form action="">
+							<img
+								src="/Images/web.svg"
+								alt=""
+							/>
+							<select
+								name="role"
+								id="role"
+								class=" py-2 ps-4 text-white bg-transparent border border-0"
+							>
+								<option
+									value=""
+									selected
+									disabled
+									class="bg-transparent"
+								>
+									Language
+								</option>
+								<option value="">English</option>
+								<option value="">French</option>
+								<option value=""></option>
+							</select>
+						</form>
+						<div class="online-links-wrappers d-flex gap-3">
+							<img
+								src="/Images/instagram.svg"
+								alt=""
+							/><img
+								src="/Images/youtube-fill.svg"
+								alt=""
+							/><img
+								src="/Images/footer-facebook.svg"
+								alt=""
+							/><img
+								src="/Images/footer-linkedin.svg"
+								alt=""
+							/>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
         <script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
