--- a/HTML/Mentee-dashboard/mentee-dashboard-1.html
+++ b/HTML/Mentee-dashboard/mentee-dashboard-1.html
@@ -365,7 +365,7 @@
 								alt=""
 							/>
 							<a
-								href="./groups-chats.html"
+								href="./chats.html"
 								class="text-black ms-2"
 								>Messages</a
 							>
@@ -440,7 +440,7 @@
 							<a
 								href=""
 								class="text-black ms-2"
-								>Setting</a
+								>Settings</a
 							>
 						</div>
 					</div>
