--- a/HTML/Mentee-dashboard/resource.html
+++ b/HTML/Mentee-dashboard/resource.html
@@ -51,7 +51,7 @@
                                 class="nav-link active fs-5"
                                 id="first-link"
                                 aria-current="page"
-                                href="/index.html"
+                                href="../landingpage.html"
                                 >Home</a
                             >
                         </li>
@@ -59,7 +59,7 @@
                             <a
                                 class="nav-link fs-5"
                                 id="nav-link2"
-                                href="#"
+                                href="mentee-dashboard-1.html"
                                 >Dashboard</a
                             >
                         </li>
@@ -67,8 +67,8 @@
                             <a
                                 class="nav-link fs-5"
                                 id="nav-link2"
-                                href="#"
-                                >Responses</a
+                                href="./resource.html"
+                                >Resources</a
                             >
                         </li>
                         <div class="btn-div d-flex gap-4 position-relative">
