--- a/HTML/signup_successful.html
+++ b/HTML/signup_successful.html
@@ -16,7 +16,7 @@
         <div class="seconddiv">
           <h4>All Set</h4>
           <h5>Sign Up Sucessful</h5>
-          <a href="../HTML/LogIn.html">
+          <a href="./Mentee-dashboard/profile-fill.html">
             <button type="submit">Log in</button>
           </a>
         </div>
