added page connections

--- a/HTML/Mentee-dashboard/Mentee-m-search-results.html
+++ b/HTML/Mentee-dashboard/Mentee-m-search-results.html
@@ -69,6 +69,16 @@
 									>Dashboard</a
 								>
 							</li>
+							<li class="nav-item dropdown fs-5">
+								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="nav-link1">
+									Services
+								</a>
+								<ul class="dropdown-menu ps-3">
+									<li><a class="dropdown-item text-white mt-2" href="../SearchPage.html">Agile Coaching</a></li>
+									<li><a class="dropdown-item text-white my-3" href="../SearchPage2.html">Mentorship</a></li>
+									
+								</ul>
+							</li>
 							<li class="nav-item">
 								<a
 									class="nav-link fs-5"
@@ -121,7 +131,7 @@
 				<!-- side navbar -->
 				
 				<div class="home-content mt-5 mb-5">
-					<h4 class="fs-4">Profile</h4>
+					<h4 class="fs-3">Profile</h4>
 					<hr class="w-100 mb-5" />
 					<div class="profile-wrapper d-flex align-items-center gap-4">
 						<div class="profile-img">
@@ -131,7 +141,7 @@
 							/>
 						</div>
 						<div class="profile-text">
-							<h5 class="mb-3">Peter David</h5>
+							<h5 class="mb-3 fs-3">Peter David</h5>
 							<p class="mb-2">Lead Product Designer at LinkedIn</p>
 							<p class="mb-2">10 years experience</p>
 							<p class="mb-2">Time zone Nigeria (GMT+1)</p>
