--- a/HTML/Mentee-dashboard/Mentor_booking.html
+++ b/HTML/Mentee-dashboard/Mentor_booking.html
@@ -65,16 +65,26 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="#"
+									href="./mentee-dashboard-1.html"
 									>Dashboard</a
 								>
+							</li>
+							<li class="nav-item dropdown fs-5">
+								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="nav-link1">
+									Services
+								</a>
+								<ul class="dropdown-menu ps-3">
+									<li><a class="dropdown-item text-white mt-2" href="../SearchPage.html">Agile Coaching</a></li>
+									<li><a class="dropdown-item text-white my-3" href="../SearchPage2.html">Mentorship</a></li>
+									
+								</ul>
 							</li>
 							<li class="nav-item">
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="#"
-									>Responses</a
+									href="./resource.html"
+									>Resources</a
 								>
 							</li>
 							<div class="btn-div d-flex gap-4 position-relative">
