--- a/HTML/Mentee-dashboard/book-mentor.html
+++ b/HTML/Mentee-dashboard/book-mentor.html
@@ -65,6 +65,16 @@
 									>Dashboard</a
 								>
 							</li>
+							<li class="nav-item dropdown fs-5">
+								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="nav-link1">
+									Services
+								</a>
+								<ul class="dropdown-menu ps-3">
+									<li><a class="dropdown-item text-white mt-2" href="../SearchPage.html">Agile Coaching</a></li>
+									<li><a class="dropdown-item text-white my-3" href="../SearchPage2.html">Mentorship</a></li>
+									
+								</ul>
+							</li>
 							<li class="nav-item">
 								<a
 									class="nav-link fs-5"
@@ -116,15 +126,15 @@
 			<section class="main-sec mt-5 pt-5 d-flex gap-5">
 				<!-- side navbar -->
 				<div class="sidebar d-flex flex-column gap-4">
-					<div class="profile-wrapper d-flex gap-3 mt-4">
+					<div class="profile-wrapper d-flex gap-3 my-4">
 						<img
 							src="/Images/dashboard-profile.svg"
 							alt=""
-							class="w-50"
+							class="w-25"
 						/>
 						<div class="profile-content">
-							<h2 class="fs-4">John Doe</h2>
-							<a href="./mentee-profile.html">View profile</a>
+							<h2 class="fs-3">John Doe</h2>
+							<a href="./mentee-profile.html" class="ms-2">View profile</a>
 						</div>
 					</div>
 					<div
@@ -137,7 +147,7 @@
 							/>
 							<a
 								href="./waitlist.html"
-								class="text-black ms-2"
+								class="text-black ms-2 fs-5"
 								>Join waitlist</a
 							>
 						</div>
@@ -147,8 +157,8 @@
 								alt=""
 							/>
 							<a
-								href="./groups-chats.html"
-								class="text-black ms-2"
+								href="./chats.html"
+								class="text-black ms-2 fs-5"
 								>Messages</a
 							>
 						</div>
@@ -159,7 +169,7 @@
 							/>
 							<a
 								href="./bookings.html"
-								class="text-black ms-2"
+								class="text-black ms-2 fs-5"
 								>Bookings</a
 							>
 						</div>
@@ -170,7 +180,7 @@
 							/>
 							<a
 								href="./connections.html"
-								class="text-black ms-2"
+								class="text-black ms-2 fs-5"
 								>Connections</a
 							>
 						</div>
@@ -181,7 +191,7 @@
 							/>
 							<a
 								href="./achievements.html"
-								class="text-black ms-2"
+								class="text-black ms-2 fs-5"
 								>Milestones</a
 							>
 						</div>
@@ -192,7 +202,7 @@
 							/>
 							<a
 								href="./group-sessions.html"
-								class="text-black ms-2"
+								class="text-black ms-2 fs-5"
 								>Group sessions</a
 							>
 						</div>
@@ -204,17 +214,17 @@
 							/>
 							<a
 								href=""
-								class="text-black ms-2"
-								>Setting</a
+								class="text-black ms-2 fs-5"
+								>Settings</a
 							>
 						</div>
 					</div>
 				</div>
 				<div class="home-content mt-5 w-100">
-					<h4 class="fs-4 mb-5">Bookings</h4>
+					<h4 class="fs-3 fw-bold mb-5">Bookings</h4>
 					<a
 						href="./bookings.html"
-						class="fs-5 first-a"
+						class="fs-4 first-a"
 						>Check Availability</a
 					>
 					<hr class="w-75 mb-4" />
@@ -225,7 +235,7 @@
 								<a
 									href=""
 									class="text-black"
-									>Monday <br />07:30am</a
+									>Monday <br> 07:30am</a
 								>
 							</button>
 							<button class="btn border-secondary-subtle border border-rounded">
@@ -369,7 +379,7 @@
 							</button>
 						</div>
                         <div class="btn-div d-flex justify-content-end mt-4 w-75">
-                            <button class="btn border-black border-rounded-pill px-4 py-2 ">
+                            <button class="btn border-black rounded-pill px-4 py-2 ">
                                 <a href="./bookings.html" class="text-black">Book Mentor</a>
                             </button>
                         </div>
