--- a/HTML/Mentee-dashboard/groups-chats.html
+++ b/HTML/Mentee-dashboard/groups-chats.html
@@ -59,6 +59,16 @@
                                 >Dashboard</a
                             >
                         </li>
+                        <li class="nav-item dropdown fs-5">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="nav-link1">
+                                Services
+                            </a>
+                            <ul class="dropdown-menu ps-3">
+                                <li><a class="dropdown-item text-white mt-2" href="../SearchPage.html">Agile Coaching</a></li>
+                                <li><a class="dropdown-item text-white my-3" href="../SearchPage2.html">Mentorship</a></li>
+                                
+                            </ul>
+                        </li>
                         <li class="nav-item">
                             <a
                                 class="nav-link fs-5"
@@ -110,7 +120,7 @@
         <section class="main-sec mt-5 pt-5 d-flex gap-5">
             <!-- side navbar -->
             
-            <div class="home-content mt-5 w-100">
+            <div class="home-content my-5 w-100">
                 <div class="profile-wrapper d-flex align-items-center justify-content-between w-75 mt-1">
                     <div class="profile-wrapper d-flex align-items-center">
                         <div class="profile-img">
