--- a/HTML/Mentor-dashboard/resource.html
+++ b/HTML/Mentor-dashboard/resource.html
@@ -59,7 +59,7 @@
                             <a
                                 class="nav-link fs-5"
                                 id="nav-link2"
-                                href="#"
+                                href="./Mentor-dashboard.html"
                                 >Dashboard</a
                             >
                         </li>
@@ -67,8 +67,8 @@
                             <a
                                 class="nav-link fs-5"
                                 id="nav-link2"
-                                href="#"
-                                >Responses</a
+                                href="./resource.html"
+                                >Resources</a
                             >
                         </li>
                         <div class="btn-div d-flex gap-4 position-relative">
@@ -97,8 +97,8 @@
                                 alt=""
                             />
                             <img
-                                src="/Images/Steve.svg"
-                                alt=""
+                                src="/Images/Peter.svg"
+                                alt="" class="w-25"
                             />
                             <img
                                 src="/Images/symbols-arrow-drop-down.svg"
