--- a/HTML/Mentee-dashboard/Mentee-booking-response.html
+++ b/HTML/Mentee-dashboard/Mentee-booking-response.html
@@ -16,6 +16,7 @@
 			integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
 			crossorigin="anonymous"
 		/>
+		<link rel="stylesheet" href="/CSS/footer.css">
 		<link
 			rel="stylesheet"
 			href="/CSS/Mentee's booking response.css"
@@ -65,9 +66,19 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="./bookings.html"
+									href="./mentee-dashboard-1.html"
 									>Dashboard</a
 								>
+							</li>
+							<li class="nav-item dropdown fs-5">
+								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="nav-link1">
+									Services
+								</a>
+								<ul class="dropdown-menu ps-3">
+									<li><a class="dropdown-item text-white mt-2" href="../SearchPage.html">Agile Coaching</a></li>
+									<li><a class="dropdown-item text-white my-3" href="../SearchPage2.html">Mentorship</a></li>
+									
+								</ul>
 							</li>
 							<li class="nav-item">
 								<a
@@ -121,14 +132,14 @@
 			<section class="main-sec mt-5 pt-5 d-flex gap-5">
 				<!-- side navbar -->
 				<div class="sidebar d-flex flex-column gap-4 ps-3">
-					<div class="profile-wrapper d-flex gap-3 mt-4">
+					<div class="profile-wrapper d-flex gap-3 my-4">
 						<img
 							src="/Images/dashboard-profile.svg"
-							alt="" class="w-50"
+							alt="" class="w-25"
 						/>
 						<div class="profile-content">
-							<h2 class="fs-4">John Doe</h2>
-							<a href="./mentee-profile.html">View profile</a>
+							<h2 class="fs-3">John Doe</h2>
+							<a href="./mentee-profile.html" class="ms-2">View profile</a>
 						</div>
 					</div>
 					<div
@@ -139,42 +150,42 @@
 								src="/Images/home-icon.svg"
 								alt="" 
 							/>
-							<a href="./Mentee-booking-response.html" class="ms-2">Join waitlist</a>
+							<a href="./Mentee-booking-response.html" class="ms-2 fs-5">Join waitlist</a>
 						</div>
 						<div class="icon-links">
 							<img
 								src="/Images/message.svg"
 								alt=""
 							/>
-							<a href="./groups-chats.html" class="ms-2">Messages</a>
+							<a href="./groups-chats.html" class="ms-2 fs-5">Messages</a>
 						</div>
 						<div class="icon-links">
 							<img
 								src="/Images/booking-icon.svg"
 								alt=""
 							/>
-							<a href="./bookings.html" class="ms-2">Bookings</a>
+							<a href="./bookings.html" class="ms-2 fs-5">Bookings</a>
 						</div>
 						<div class="icon-links">
 							<img
 								src="/Images/connection-icon.svg"
 								alt=""
 							/>
-							<a href="./connections.html" class="ms-2">Connections</a>
+							<a href="./connections.html" class="ms-2 fs-5">Connections</a>
 						</div>
 						<div class="icon-links">
 							<img
 								src="/Images/milestones-trophy.svg"
 								alt=""
 							/>
-							<a href="./achievements.html" class="ms-2">Milestones</a>
+							<a href="./achievements.html" class="ms-2 fs-5">Milestones</a>
 						</div>
 						<div class="icon-links">
 							<img
 								src="/Images/connection-icon.svg"
 								alt=""
 							/>
-							<a href="./group-sessions.html" class="ms-2">Group sessions</a>
+							<a href="./group-sessions.html" class="ms-2 fs-5">Group sessions</a>
 						</div>
 						<div class="icon-links">
 							<img
@@ -182,17 +193,20 @@
 								alt=""
 								class="settings-icon"
 							/>
-							<a href="" class="ms-2">Setting</a>
+							<a href="" class="ms-2 fs-5">Settings</a>
 						</div>
 					</div>
 				</div>
 				<!-- content -->
 				<div class="home-content mt-5 w-100">
-					<h4 class="fs-5">Hello, <span>John Doe</span></h4>
-					<hr class="w-75 mt-5 mb-5" />
+					<h4 class="fs-3 mb-5">Hello, <span>John Doe</span></h4>
+					<a href="./bookings.html" class=" text-black me-5 pe-5 fs-4">Upcoming</a>
+                    <a href="./Mentee-booking-response.html" class="text-black mx-5 px-5 fs-4 border-bottom border-black border-3">Pending</a>
+                    <a href="" class="text-black ms-5 ps-5 fs-4">History</a>
+					<hr class="w-100 mb-5" />
 					<div class="card w-75 my-5 border-light">
 						<div class="card-body ms-3">
-							<h5 class="card-title mt-3 mb-5">Upcoming Sessions</h5>
+							<h5 class="card-title mt-3 mb-5 fs-3">Upcoming Sessions</h5>
 							<p class="card-text mb-3">
 								No Upcoming Sessions. Update 
                                 <span class="mx-1"><a href="">Booking Schedule</a></span>
@@ -202,14 +216,14 @@
 					</div>
 					<div class="card w-75 my-5 border-light">
 						<div class="card-body ms-4">
-							<h5 class="card-title mt-3 mb-4">Notifications</h5>
+							<h5 class="card-title mt-3 mb-4 fs-3">Notifications</h5>
                             <div class="notification-wrapper d-flex gap-2 mb-3">
                                 <img src="/Images/symbols-arrow-drop-down.svg" alt="">
                                 <p>Your Request to <span class="mx-1"> Ali Mohammed</span> is Pending</p>
                             </div>
                             <div class="notification-wrapper d-flex gap-2 mb-3">
                                 <img src="/Images/symbols-arrow-drop-down.svg" alt="">
-                                <p>Your Request to <span class="mx-1"> Peter David</span> is Pending</p>
+                                <p>Your Request to <span class="mx-1"> Peter David</span> is Approved</p>
                             </div>
                             <div class="notification-wrapper d-flex gap-2 mb-4">
                                 <img src="/Images/symbols-arrow-drop-down.svg" alt="">
@@ -222,6 +236,133 @@
 				</div>
 			</section>
 		</main>
+
+		<footer>
+			<div class="footer-wrapper py-5 d-flex gap-5">
+				<div class="footer-logo">
+					<img
+						src="/Images/Agilyst Logo5 3.jpg"
+						alt=""
+					/>
+				</div>
+				<div class="footer-content-wrapper">
+					<form
+						action=""
+						class=""
+					>
+						<input
+							type="email"
+							name=""
+							id=""
+							placeholder="Your Email"
+							class="border-rounded rounded-pill bg-transparent text-white py-2 ps-3 border-white w-75"
+							required
+						/>
+						<button
+							class="btn btn-large border rounded-pill bg-white pe-5 py-2 ps-2 ms-4"
+						>
+							<a
+								href=""
+								class="px-4 text-primary"
+							>
+								Subscribe Now!
+							</a>
+						</button>
+					</form>
+					<div
+						class="footer-links text-white d-flex justify-content-between my-5"
+					>
+						<div class="platform-links">
+							<h3 class="text-uppercase mb-2">Platform</h3>
+							<ul>
+								<li><a href="">Find Mentor</a></li>
+								<li><a href="">Become a Mentor</a></li>
+								<li><a href="">About Us</a></li>
+								<li><a href="">Contact Us</a></li>
+							</ul>
+						</div>
+						<div class="product-links">
+							<h3 class="text-uppercase mb-2">Product</h3>
+							<ul>
+								<li><a href="">Blog</a></li>
+								<li><a href="">Community</a></li>
+							</ul>
+						</div>
+						<div class="legal-links">
+							<h3 class="text-uppercase mb-2">Legal</h3>
+							<ul>
+								<li><a href="">Terms and Conditions</a></li>
+								<li><a href="">Privacy Policy</a></li>
+								<li><a href="">FAQs</a></li>
+							</ul>
+						</div>
+					</div>
+					<hr class="" />
+					<div class="copyright d-flex justify-content-between w-100 align-items-center mt-5">
+						<p class="text-white d-flex align-items-center gap-3">
+							<span class="fs-3 text-white">©</span> All rights reserved 2023
+						</p>
+						<form action="" id="language-form">
+							<img
+								src="/Images/web.svg"
+								alt=""
+							/>
+							<select
+								name="role"
+								id="language-select"
+								class=" py-2 ps-4 text-white bg-transparent border border-0"
+							>
+								<option
+									value=""
+									selected
+									disabled
+									class="bg-transparent option1"
+								>
+									English
+								</option>
+								<option value="">Bengali</option>
+								<option value="">Chinese</option>
+								<option value="en">English</option>
+								<option value="fr">French</option>
+								<option value="de">German</option>
+								<option value="">Hindi</option>
+								<option value="">Indonesian</option>
+								<option value="">Japanese</option>
+								<option value="">Korean</option>
+								<option value="">Mandarin</option>
+								<option value="">Marathi</option>
+								<option value="pt">Portuguese</option>
+								<option value="">Russian</option>
+								<option value="">Spanish</option>
+								<option value="">Standard Arabic</option>
+								<option value="">Swahili</option>
+								<option value="">Tamil</option>
+								<option value="">Telugu</option>
+								<option value="">Turkish</option>
+								<option value="">Urdu</option>
+								<option value="">
+                                    Wu Chinese</option>
+							</select>
+						</form>
+						<div class="online-links-wrappers d-flex gap-3">
+							<img
+								src="/Images/instagram.svg"
+								alt=""
+							/><img
+								src="/Images/youtube-fill.svg"
+								alt=""
+							/><img
+								src="/Images/footer-facebook.svg"
+								alt=""
+							/><img
+								src="/Images/footer-linkedin.svg"
+								alt=""
+							/>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 	</body>
 </html>
