--- a/HTML/Mentee-dashboard/bookings2.html
+++ b/HTML/Mentee-dashboard/bookings2.html
@@ -232,7 +232,7 @@
                             <a
                                 href=""
                                 class="text-black ms-2 fs-5"
-                                >Settings</a
+                                >Setting</a
                             >
                         </div>
                     </div>
@@ -240,13 +240,13 @@
                 <div class="home-content mt-5 w-100">
                     <h5 class="fs-2 fw-bold text-black mb-3">Bookings</h5>
                     <p class="mb-5">The session timings are following your local timezone Africa/Lagos</p>
-                    <a href="" class="border-bottom border-black text-black border-3 me-5 pe-5 fs-4">Upcoming</a>
-                    <a href="./Mentee-booking-response.html" class="text-black mx-5 px-5 fs-4">Pending</a>
-                    <a href="" class="text-black ms-5 ps-5 fs-4">History</a>
-                    <hr class="w-100 mb-5">
+                    <a href="" class="border-bottom border-black text-black border-3 me-5 pe-5 fs-5">Upcoming</a>
+                    <a href="./Mentee-booking-response.html" class="text-black mx-5 px-5 fs-5">Pending</a>
+                    <a href="" class="text-black ms-5 ps-5 fs-5">History</a>
+                    <hr class="w-100 mb-4">
                     <div class="card text-center mb-3 w-75 border border-2 border-black ">
 						<div class="card-body mt-4 mb-5">
-							<h5 class="card-title text-start ms-4">Mentorship session with <a href="./Mentee-m-search-results.html">Peter David</a></h5>
+							<h5 class="card-title text-start ms-3">Mentorship session with <a href="./Mentee-m-search-results.html">Peter David</a></h5>
 							<div class="card-text d-flex justify-content-evenly my-5">
 								<div class="card-date d-flex gap-3">
 									<img
@@ -274,7 +274,7 @@
 								>Send Message</a
 							>
 							<a
-								href="./book-mentor.html"
+								href="#"
 								class="btn btn-light border border-secondary-subtle ms-4 py-2 px-4 fs-5"
 								>Reschedule this call</a
 							>
@@ -285,6 +285,47 @@
 							>
 						</div>
 					</div>
+                    <div class="card text-center mb-3 w-75">
+                        <div class="card-body mt-4 mb-5">
+							<h5 class="card-title text-start ms-3">Agile coaching session with <a href="./Mentee-m-search-results.html">Steve Brishton</a></h5>
+							<div class="card-text d-flex justify-content-evenly my-5">
+								<div class="card-date d-flex gap-3">
+									<img
+										src="/Images/uit-calender.svg"
+										alt=""
+									/>
+									<p class="fs-5">Mon, Aug 12</p>
+								</div>
+								<div class="card-date d-flex gap-3">
+									<img
+										src="/Images/booking-icon.svg"
+										alt=""
+									/>
+									<p class="fs-5">7:30 PM - 8:00 PM</p>
+								</div>
+							</div>
+							<a
+								href="./joining-coach.html"
+								class="btn btn-primary py-2 px-4 fs-5"
+								>Join Meeting</a
+							>
+							<a
+								href="#"
+								class="btn btn-light border border-secondary-subtle ms-4 py-2 px-4 fs-5"
+								>Send Message</a
+							>
+							<a
+								href="#"
+								class="btn btn-light border border-secondary-subtle ms-4 py-2 px-4 fs-5"
+								>Reschedule this call</a
+							>
+							<a
+								href="#"
+								class="btn btn-light py-2 px-4 ms-3 fs-5 text-danger"
+								>Cancel</a
+							>
+						</div>
+                    </div>
                 </div>
             </section>
         </main>
