--- a/HTML/Mentee-dashboard/edit-profile.html
+++ b/HTML/Mentee-dashboard/edit-profile.html
@@ -184,7 +184,7 @@
                     <button
 							class="btn signup-btn w-100 text-white py-2 fs-5 mt-5" 
 							type="submit"
-							onclick="window.location.href='./mentee-dashboard-1.html'"
+							onclick="window.location.href='./mentee-profile.html'"
 						>
 							Edit
 						</button>
