--- a/HTML/Mentee-dashboard/my-posts.html
+++ b/HTML/Mentee-dashboard/my-posts.html
@@ -57,7 +57,7 @@
 									class="nav-link active fs-5"
 									id="first-link"
 									aria-current="page"
-									href="/index.html"
+									href="../landingpage.html"
 									>Home</a
 								>
 							</li>
@@ -65,9 +65,19 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="./Mentor-dashboard.html"
+									href="./mentee-dashboard-1.html"
 									>Dashboard</a
 								>
+							</li>
+							<li class="nav-item dropdown fs-5">
+								<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="nav-link1">
+									Services
+								</a>
+								<ul class="dropdown-menu ps-3">
+									<li><a class="dropdown-item text-white mt-2" href="../SearchPage.html">Agile Coaching</a></li>
+									<li><a class="dropdown-item text-white my-3" href="../SearchPage2.html">Mentorship</a></li>
+									
+								</ul>
 							</li>
 							<li class="nav-item">
 								<a
