--- a/HTML/Mentee-dashboard/resource.html
+++ b/HTML/Mentee-dashboard/resource.html
@@ -63,6 +63,16 @@
                                 >Dashboard</a
                             >
                         </li>
+                        <li class="nav-item dropdown fs-5">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="nav-link1">
+                                Services
+                            </a>
+                            <ul class="dropdown-menu ps-3">
+                                <li><a class="dropdown-item text-white mt-2" href="../SearchPage.html">Agile Coaching</a></li>
+                                <li><a class="dropdown-item text-white my-3" href="../SearchPage2.html">Mentorship</a></li>
+                                
+                            </ul>
+                        </li>
                         <li class="nav-item">
                             <a
                                 class="nav-link fs-5"
@@ -97,7 +107,7 @@
                                 alt=""
                             />
                             <img
-                                src="/Images/Steve.svg"
+                                src="/Images/dashboard-profile.svg"
                                 alt=""
                             />
                             <img
