--- a/index.html
+++ b/index.html
@@ -386,7 +386,8 @@
 
     <!-- Chatbot -->
     
-    <div class="toggle-div"><button id="toggleChatButton">Chat</button></div>
+    <div class="toggle-div"><button id="toggleChatButton"> <img src="/Images/chatbot-icon.png" alt="">
+    </button></div>
     <div class="chat-container" id="chatContainer">
         <div class="chat-header">
             <button id="closeChatButton">x</button>
