--- a/HTML/Account_activation.html
+++ b/HTML/Account_activation.html
@@ -27,6 +27,7 @@
 		<title>Account Verification</title>
 	</head>
 	<body>
+		<!-- account activation page -->
 		<header>
 			<nav class="navbar navbar-expand-lg fixed-top py-2 px-5 mx-auto">
 				<div class="container-fluid gap-md-5">
